--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,22 @@
 {{#each posts as |post|}}
 
+{{!-- need to fix flex later --}}
+
+<div class="row mb-4 project">
+  <div class="col-md-5">
+    <h2>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
+    </h2>
+    <p>Created by {{user.name}} on {{format_date post.date_created}}</p>
+  </div>
+  <div class="col-md-7">
+    <p>
+      {{post.content}}
+    </p>
+  </div>
+</div>
 
 {{/each}}
+
+
+
