--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,6 +14,9 @@
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
+      <dir>
+        <a href="/signup">Sign up!</a>
+      </dir>
     </form>
   </div>
 </div>
