fixed some broken route and handlebars

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -23,9 +23,9 @@
 </div>
 
 
-{{#if Logged_in}}
+{{#if logged_in}}
 
-<div class+"add-comment">
+<div class="add-comment">
       <h4>Add a Comment:</h4>
       <form class="comment-form">
         <div class="form-group">
