--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">The Tech Blog</a>
+        <a class="navbar-brand" href="/">The Tech Blog</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,13 +36,13 @@
             <li class="nav-item">
               <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
-            {{#if Logged_in}}
-              <li class="nav-item login">
+            {{#if logged_in}}
+              <li class="nav-item logout">
                 <a class="nav-link logout" href="/">Logout</a>
               </li>
             {{else}}
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+              <li class="nav-item login">
+                <a class="nav-link login" href="/login">Login</a>
               </li>
             {{/if}}
           </ul>
