--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,13 +1,13 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      {{post.title}}
+      {{title}}
     </h2>
-    <p>Created by {{user.name}} on {{format_date post.date_created}}</p>
+    <p>Created by {{user.name}} on {{format_date date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{post.content}}
+      {{content}}
     </p>
   </div>
 </div>
@@ -16,8 +16,8 @@
   <h4>Comments:</h4>
   {{#each comments as |comment|}} 
     <div class="comment">
-      <p>{{content}}</p>
-      <p>Posted by {{user.username}} on {{formatDate post.date_created}}</p>
+      <p>{{comment.content}}</p>
+      <p>Posted by {{comment.user.name}} on {{format_date comment.date_created}}</p>
     </div>
   {{/each}}
 </div>
@@ -27,7 +27,7 @@
 
 <div class="add-comment">
       <h4>Add a Comment:</h4>
-      <form class="comment-form">
+      <form class="comment-form new-comment">
         <div class="form-group">
         <textarea class="form-input" id="comment-content" name="comment-content"></textarea>
       </div>
